move to barrel exprt tsup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "lib": ["ESNext"],
+    "lib": [
+      "ESNext"
+    ],
     "module": "esnext",
     "target": "esnext",
     "moduleResolution": "bundler",
@@ -14,8 +16,15 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
-    "types": ["bun-types"]
+    "types": [
+      "bun-types"
+    ]
   },
-  "include": ["./src/index.ts", "./src/result.ts", "./vendor/**/*.mjs"],
-  "exclude": ["node_modules"]
+  "include": [
+    "./src/**/*.ts",
+    "./vendor/**/*.mjs"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
