--- a/package.json
+++ b/package.json
@@ -3,25 +3,28 @@
   "version": "0.0.12",
   "description": "",
   "license": "MIT",
-  "type": "module",
-  "main": "src/melange-ffi.mjs",
-  "types": "src/melange-ffi.d.mts",
-  "module": "src/melange-ffi.mjs",
-  "files": [
-    "src/melange-ffi.mjs",
-    "src/melange-ffi.d.mts",
-    "vendor/**/*.mjs"
-  ],
   "repository": "https://github.com/dmmulroy/melange-ffi",
   "author": "Dillon Mulroy <dillon.mulroy@gmail.com>",
+  "type": "module",
+  "main": "./dist/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "files": [
+    "dist",
+    "vendor/**/*.mjs"
+  ],
   "scripts": {
-    "build": "tsup src/result.ts  --format cjs,esm --dts --treeshake --clean --sourcemap",
+    "build": "tsup",
     "lint": "tsc"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.39.3",
     "bun-types": "1.0.20",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@microsoft/api-extractor": "^7.39.3"
   }
 }
