--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   "scripts": {
     "publish-patch": "npm run build && npm version patch && npm publish",
     "build": "tsup",
-    "lint": "tsc"
+    "lint": "tsc",
+    "test": "bun test"
   },
   "devDependencies": {
     "bun-types": "1.0.20",
+    "fast-check": "^3.15.0",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.3",
-    "@microsoft/api-extractor": "^7.39.3"
+    "typescript": "^5.3.3"
   }
 }
