--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ocamlscript",
-  "version": "0.0.2",
+  "name": "melange-ffi",
+  "version": "0.0.22",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/dmmulroy/melange-ffi",
