--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "melange-ffi",
-  "version": "0.0.23",
+  "name": "fremen",
+  "version": "0.0.1",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/dmmulroy/melange-ffi",
